--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,8 +13,20 @@
     </head>
     <body>
 	<header>
-		<h1><a href="{{ path('homepage') }}">Guestbook</a></h1>
+		<h1><a href="{{ path('homepage') }}">&#128217; {{ 'Conference Guestbook'|trans }}</a></h1>
 		{{ render_esi(path('conference_header')) }}
+		<ul>
+			<li class="nav-item dropdown">
+				<a class="nav-link dropdown-toggle" href="#" id="dropdown-language" role="button"
+				data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				{{ app.request.locale|locale_name(app.request.locale)|u.title }}
+				</a>
+				<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdown-language">
+				<li><a class="dropdown-item" href="{{ path('homepage', {_locale: 'en'}) }}">English</a></li>
+				<li><a class="dropdown-item" href="{{ path('homepage', {_locale: 'fr'}) }}">Français</a></li>
+				</ul>
+			</li>
+		</ul>
 		<hr />
 	</header>
         {% block body %}{% endblock %}
